# Crystal

./: .gitignore  .gitmodules  Autobuild.sh  CMakeLists.txt  DevelopmentLogs.md  readme.md
Demo/: Demo.c  Demo.cpp  Demo.h  Demo1.c  Demo2.c  Demo3.c  Demo4.c  base.c
include/: Crystal.h  crdefs.h  datastructure.h
include/parts/: CrAudio.h  CrDynExtra.h  CrTreeExtra.h  CrUI.h  Crbasic.h  Crbinary.h  Crthread.h
player/: player.c
src/core/: crystal.c  datastructure.c
src/headers/: DefaultShaders.h  crerrors.h  crft.h  cropgl.hpp  datastructureheader.h  openglAPIs.h
src/parts/Audio/: CRAudio.cpp
src/parts/UI/: CRwindow.cpp  LinuxUI.c  WindowsUI.c  crftt.c  cropgl.cpp
src/parts/basic/: CRtimer.c  CrInet.c  Crthread.c  basic.c  basicheader.h
src/parts/binary/: binary.c
src/parts/dynextra/: extra.c
src/parts/treextra/: extra.c
